--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<a href="subjects/Spectroscopy.html">Atomic Physics</a><br>
 		<a href="subjects/NuclearAndParticlePhysics.html">Nuclear and Particle Physics</a><br>
 		<a href="subjects/CMP.html">Condensed Matter Physics</a><br>
-		<!--check-->>
+		<a href="subjects/test.html">Testing Page</a><br>
+		<!--check-->
 	</body>
 </html>
