--- a/subjects/test.html
+++ b/subjects/test.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<h1>My First Web Page</h1>
-<p>My first paragraph.</p>
-
-<button type="button" onclick="document.write(5 + 6)">Try it</button>
-
+<canvas id="myCanvas" width="500" height="500" style="border:1px solid #000000;"></canvas>
+<script>
+var canvas = document.getElementById("myCanvas");
+var ctx = canvas.getContext("2d");
+ctx.fillStyle = "#FF0000";
+ctx.fillRect(0, 0, 150, 75);
+</script>
 </body>
 </html>
