--- a/subjects/test.html
+++ b/subjects/test.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6">
+  </script>
+  <script id="MathJax-script" async
+          src="https://cdn.jsdelivr.net/npm/mathjax@3.0.1/es5/tex-mml-chtml.js">\
+  </script>
+</head>
 <body>
+  Animation Part
 <canvas id="myCanvas" width="500" height="500" style="border:1px solid #000000;"></canvas>
 <script>
 var canvas = document.getElementById("myCanvas");
@@ -9,5 +17,7 @@ ctx.fillStyle = "#FF0000";
 ctx.fillRect(0, 0, 150, 75);
 <!--t-->
 </script>
+  Latex Part
+  \[\dfrac{45666}{234232}\]
 </body>
 </html>
