--- a/subjects/test.html
+++ b/subjects/test.html
@@ -15,9 +15,9 @@ var canvas = document.getElementById("myCanvas");
 var ctx = canvas.getContext("2d");
 ctx.fillStyle = "#FF0000";
 ctx.fillRect(0, 0, 150, 75);
-<!--t-->
+<!--taeko-->
 </script>
-
+<!--hghjg-->
 Latex Part
 \[\dfrac{45666}{234232}\]
 </body>
