--- a/subjects/test.html
+++ b/subjects/test.html
@@ -8,7 +8,7 @@
   </script>
 </head>
 <body>
-  Animation Part
+  Animation Part\\
 <canvas id="myCanvas" width="500" height="500" style="border:1px solid #000000;"></canvas>
 <script>
 var canvas = document.getElementById("myCanvas");
@@ -18,7 +18,7 @@ ctx.fillRect(0, 0, 150, 75);
 <!--taeko-->
 </script>
 <!--hghjg-->
-Latex Part
+Latex Part\\
 \[\dfrac{45666}{234232}\]
 </body>
 </html>
