--- a/subjects/test.html
+++ b/subjects/test.html
@@ -17,7 +17,7 @@ ctx.fillStyle = "#FF0000";
 ctx.fillRect(0, 0, 150, 75);
 <!--taeko-->
 </script>
-<!--hjbg-->
+<!--hjj//jbg-->
 <br>Latex Part
 \[\dfrac{45666}{234232}\]
 </body>
