--- a/subjects/Electronics.html
+++ b/subjects/Electronics.html
@@ -17,10 +17,6 @@
 		<a href="url">Amplification</a><br>
 		<a href="url">Filtering</a><br>
 		<b>Advanced: </b><br>
-		<a href="url">Green's Function</a><br>
-		<a href="url">Partial Differential Equations</a><br>
-		<a href="url">Tensors</a><br>
-		<a href="url">Introductory Group Theory</a><br>
-		<a href="url">Basics of Computaional Physics</a><br>
+		<a href="url">Damn!!</a><br>
 	</body>
 </html>
