--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<a href="subjects/Spectroscopy.html">Atomic Physics</a><br>
 		<a href="subjects/NuclearAndParticlePhysics.html">Nuclear and Particle Physics</a><br>
 		<a href="subjects/CMP.html">Condensed Matter Physics</a><br>
-		<a href="subjects/test.html">Testing Page</a><br>
+		<a href="subjects/index.html">Testing Page</a><br>
+
 		<!--k-->
 	</body>
 </html>
