--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 		<a href="subjects/Spectroscopy.html">Atomic Physics</a><br>
 		<a href="subjects/NuclearAndParticlePhysics.html">Nuclear and Particle Physics</a><br>
 		<a href="subjects/CMP.html">Condensed Matter Physics</a><br>
-		<a href="subjects/index.html">Testing Page</a><br>
-
-		<!--k-->
+		<a href="subjects/index.html">Jabra</a><br>
+		<!--kdholitaro-->
 	</body>
 </html>
